--- a/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/visitante2/listagem-visitante/listagem-visitantes.component.html
+++ b/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/visitante2/listagem-visitante/listagem-visitantes.component.html
@@ -7,59 +7,38 @@
                       <h4 class="card-title ">Visitantes Cadastrados</h4>
                   </div>
                   <div class="card-body">
-                      <div class="table-responsive">
-                          <table class="table">
+            
+                     <div class="table-responsive">
+                          <table  class="table" >
                               <thead class=" text-primary">
-                                  <th>ID </th>
+                                  <th> ID </th>
                                   <th> Nome </th>
                                   <th> CPF </th>
                                   <th> Telefone </th>
                                   <th> Endereço </th>
                                   <th> Veículo </th>
-                                  <th> Placa </th>
+                                  <th> Placa </th> 
                                   <th> Ações </th>
-                              </thead>
+                               </thead>
                               <tbody>
-                                  <tr>
-                                      <td>1</td>
-                                      <td>Dakota Rice</td>
-                                      <td>Niger</td>
-                                      <td> Oud-Turnhout</td>
-                                      <td class="text-primary">$36,738</td>
+                                  <tr *ngFor="let visitante of visitantes">
+                                      <td> {{ visitante.id }}</td>
+                                      <td> {{ visitante.nome }} </td>
+                                      <td> {{ visitante.cpf }} </td>
+                                      <td> {{ visitante.telefone }} </td>
+                                      <td> {{ visitante.endereco }} </td>
+                                      <td> {{ visitante.veiculo }} </td>
+                                      <td> {{ visitante.placa }} </td>
+                                      <td> <button mat-icon-button [routerLink]="['/visitantes/editar/',visitante.id]"><mat-icon>edit</mat-icon> </button> 
+                                       <button mat-icon-button (click)="deletar(visitante.id)"> <mat-icon>delete</mat-icon> </button></td>
                                   </tr>
-                                  <tr>
-                                      <td>2 </td>
-                                      <td> Minerva Hooper</td>
-                                      <td> Curaçao</td>
-                                      <td> Sinaai-Waas</td>
-                                      <td class="text-primary"> $23,789
-                                      </td>
-                                  </tr>
-                                  <tr>
-                                      <td>
-                                          3
-                                      </td>
-                                      <td>
-                                          Sage Rodriguez
-                                      </td>
-                                      <td>
-                                          Netherlands
-                                      </td>
-                                      <td>
-                                          Baileux
-                                      </td>
-                                      <td class="text-primary">
-                                          $56,142
-                                      </td>
-                                  </tr>
-                                 
-                        
-                              </tbody>
+                              </tbody>  
                           </table>
-                      </div>
+                      </div> 
                   </div>
               </div>
           </div>
           
   </div>
-</div>
+</div> 
+
