--- a/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/visitante2/cadastro-visitante.component.html
+++ b/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/visitante2/cadastro-visitante.component.html
@@ -1,7 +1,7 @@
 <div class="main-content">
   <div class="container-fluid">
       <div class="row">
-          <div class="col-md-8">
+          <div class="col-md-12">
               <div class="card">
                   <div class="card-header card-header-danger">
                       <h4 class="card-title">Cadastrar Visitante</h4>
@@ -58,6 +58,7 @@
                               </div>
                           </div>
                           
+                          <button mat-raised-button type="submit"  [routerLink]="['/table-list']" class="btn pull-right">Cancelar</button>
                           <button mat-raised-button type="submit" class="btn btn-danger pull-right">Salvar</button>
                           <div class="clearfix"></div>
                       </form>
