--- a/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/components/footer/footer.component.html
+++ b/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/components/footer/footer.component.html
@@ -3,11 +3,6 @@
         <nav class="pull-left">
             <ul>
                 <li>
-                    <a href="https://www.creative-tim.com">
-                        Creative Tim
-                    </a>
-                </li>
-                <li>
                     <a href="https://creative-tim.com/about-us">
                         About Us
                     </a>
@@ -26,8 +21,7 @@
         </nav>
         <div class="copyright pull-right">
             &copy;
-            {{test | date: 'yyyy'}}, made with love by
-            <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a> for a better web.
+            {{test | date: 'yyyy'}} Felipe Targino, Maria Rita, Pablo Dias, Pedro Paulo e Valquer Rafael
         </div>
     </div>
 </footer>
