--- a/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/components/porteiro/porteiro-create/porteiro-create.component.html
+++ b/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/components/porteiro/porteiro-create/porteiro-create.component.html
@@ -1,1 +1,58 @@
-<p>porteiro-create works!</p>
+<div class="main-content">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-header" id="header">
+                        <h4 class="card-title">Cadastrar Porteiro</h4>
+                    </div>
+                    <div class="card-body">
+                        <form [formGroup]="formulario" (ngSubmit)="enviar()">
+                
+                            <div class="row">
+                                <div class="col-md-6">
+                                  <mat-form-field class="example-full-width">
+                                    <input matInput placeholder="Nome" type="text" formControlName="nome">
+                                  </mat-form-field>
+                                </div>
+                                <div class="col-md-6">
+                                  <mat-form-field class="example-full-width">
+                                    <input matInput placeholder="CPF" type="text" formControlName="cpf">
+                                  </mat-form-field>
+                                </div>
+                            </div>
+  
+                            <div class="row">
+                                <div class="col-md-6">
+                                  <mat-form-field class="example-full-width">
+                                    <input matInput placeholder="Endereço" type="text" formControlName="endereco">
+                                  </mat-form-field>
+                                </div>
+
+                                <div class="col-md-6">
+                                  <mat-form-field class="example-full-width">
+                                    <input matInput placeholder="Telefone" type="text" formControlName="telefone">
+                                  </mat-form-field>
+                                </div>
+                            </div>
+                           
+                            <div class="row">
+                                <div class="col-md-12">
+                                  <label>Observações</label>
+                                  <mat-form-field class="example-full-width">
+                                     <textarea matInput></textarea>
+                                   </mat-form-field>
+                                </div>
+                            </div>
+                            
+                            <button mat-raised-button type="submit" class="btn btn-sm pull-right" id="salvar">Salvar</button>
+                            <button mat-raised-button type="submit"  [routerLink]="['/porteiros/list']" class="btn btn-sm pull-right" id="cancelar">Cancelar</button>  
+                            <div class="clearfix"></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+  </div>
+  
