--- a/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/components/residente/residente-create/residente-create.component.html
+++ b/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/components/residente/residente-create/residente-create.component.html
@@ -3,8 +3,8 @@
       <div class="row">
           <div class="col-md-12">
               <div class="card">
-                  <div class="card-header card-header-danger">
-                      <h4 class="card-title">Cadastrar Visitante</h4>
+                  <div class="card-header" id="header">
+                      <h4 class="card-title">Cadastrar Morador</h4>
                   </div>
                   <div class="card-body">
                       <form [formGroup]="formulario" (ngSubmit)="enviar()">
@@ -37,11 +37,11 @@
                               </mat-form-field>
                             </div>
                             
-                              <div class="col-md-4">
+                              <!-- <div class="col-md-3">
                                 <mat-form-field class="example-full-width">
                                   <input matInput placeholder="Casa" type="text" formControlName="casa">
                                 </mat-form-field>
-                              </div>
+                              </div> -->
                               <div class="col-md-4">
                                 <mat-form-field class="example-full-width">
                                   <input matInput placeholder="Bloco" type="text" formControlName="bloco">
@@ -64,8 +64,9 @@
                               </div>
                           </div>
                           
-                          <button mat-raised-button type="submit" [routerLink]="['/residentes/editar']" class="btn pull-right">Cancelar</button>
-                          <button mat-raised-button type="submit" class="btn btn-danger pull-right">Salvar</button>
+                          <button mat-raised-button type="submit" class="btn btn-sm pull-right" id="salvar">Salvar</button>
+                          <button mat-raised-button type="submit" [routerLink]="['/residentes/list']" class="btn btn-sm pull-right" id="cancelar">Cancelar</button>
+                          
                           <div class="clearfix"></div>
                       </form>
                   </div>
