--- a/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/components/sidebar/sidebar.component.html
+++ b/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/components/sidebar/sidebar.component.html
@@ -1,9 +1,9 @@
 <div class="logo">
     <a href="https://www.creative-tim.com" class="simple-text">
         <div class="logo-img">
-            <img src="/assets/img/angular2-logo-red.png"/>
+            <img src="/assets/img/fortseg.png"/>
         </div>
-        Creative Tim
+        FortSeg
     </a>
 </div>
 <div class="sidebar-wrapper">
@@ -62,4 +62,21 @@
             </a>
         </li>
     </ul>
+
+    <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
+        <!-- <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
+          <button mat-icon-button disabled></button>
+          {{node.name}}
+        </mat-tree-node> -->
+
+        <mat-tree-node *matTreeNodeDef="let node;when: hasChild" matTreeNodePadding>
+          <button mat-icon-button matTreeNodeToggle
+                  [attr.aria-label]="'Toggle ' + node.name">
+            <mat-icon class="mat-icon-rtl-mirror">
+              {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+            </mat-icon>
+          </button>
+          {{node.name}}
+        </mat-tree-node>
+      </mat-tree>
 </div>
