--- a/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/visitante2/listagem-visitante/listagem-visitantes.component.html
+++ b/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/visitante2/listagem-visitante/listagem-visitantes.component.html
@@ -3,8 +3,10 @@
       <div class="row">
           <div class="col-md-12">
               <div class="card">
-                  <div class="card-header card-header-danger">
-                      <h4 class="card-title ">Visitantes Cadastrados</h4>
+                  <div class="card-header" id="header">
+                      <h4 class="card-title ">Visitantes
+                        <button mat-raised-button type="submit" [routerLink]="['/user-profile']" id="cadastrar" class="btn btn-sm pull-right">Cadastrar</button>
+                      </h4>                      
                   </div>
                   <div class="card-body">
             
@@ -29,8 +31,10 @@
                                       <td> {{ visitante.endereco }} </td>
                                       <td> {{ visitante.veiculo }} </td>
                                       <td> {{ visitante.placa }} </td>
-                                      <td> <button mat-icon-button [routerLink]="['/visitantes/editar/',visitante.id]"><mat-icon>edit</mat-icon> </button> 
-                                       <button mat-icon-button (click)="deletar(visitante.id)"> <mat-icon>delete</mat-icon> </button></td>
+                                      <td>  
+                                       <button mat-raised-button type="submit" id="editar" [routerLink]="['/visitantes/editar/',visitante.id]" class="btn btn-sm pull-right">Editar</button>
+                                       <button mat-raised-button type="submit"  id="deletar" (click)="deletar(visitante.id)" class="btn btn-sm pull-right">Deletar</button>
+                                      </td>
                                   </tr>
                               </tbody>  
                           </table>
