--- a/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/visitante2/cadastro-visitante.component.html
+++ b/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/visitante2/cadastro-visitante.component.html
@@ -15,6 +15,7 @@
                                   <input matInput placeholder="Nome" type="text" formControlName="nome">
                                 </mat-form-field>
                               </div>
+
                               <div class="col-md-6">
                                 <mat-form-field class="example-full-width">
                                   <input matInput placeholder="CPF" type="text" formControlName="cpf">
@@ -58,7 +59,7 @@
                               </div>
                           </div>
 
-                          <button mat-raised-button type="submit" class="btn btn-sm pull-right" id="salvar">Salvar</button>
+                          <button mat-raised-button type="submit" class="btn btn-sm pull-right" id="salvar" [disabled]="!formulario.valid">Salvar</button>
                           <button mat-raised-button type="submit"  [routerLink]="['/table-list']" class="btn btn-sm pull-right" id="cancelar">Cancelar</button>
 
                           <div class="clearfix"></div>
