--- a/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/visitante2/listagem-visitante/listagem-visitantes.component.css
+++ b/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/visitante2/listagem-visitante/listagem-visitantes.component.css
@@ -4,8 +4,14 @@
 
 #editar {
     background-color: #FF6969;
+    /* margin-right: 70px; */
 }
 
 #deletar, #cadastrar {
     background-color: #19A7CE;
+    /* margin-right: 70px; */
+}
+
+#acoes{
+    margin-left: 100px;
 }
