--- a/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/components/sidebar/sidebar.component.html
+++ b/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/components/sidebar/sidebar.component.html
@@ -63,11 +63,11 @@
         </li>
     </ul>
 
-    <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
-        <!-- <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
+    <!-- <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
+        <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
           <button mat-icon-button disabled></button>
           {{node.name}}
-        </mat-tree-node> -->
+        </mat-tree-node>
 
         <mat-tree-node *matTreeNodeDef="let node;when: hasChild" matTreeNodePadding>
           <button mat-icon-button matTreeNodeToggle
@@ -78,5 +78,5 @@
           </button>
           {{node.name}}
         </mat-tree-node>
-      </mat-tree>
+      </mat-tree> -->
 </div>
