--- a/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/visitante2/listagem-visitante/listagem-visitantes.component.html
+++ b/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/visitante2/listagem-visitante/listagem-visitantes.component.html
@@ -20,7 +20,7 @@
                                   <th> Endereço </th>
                                   <th> Veículo </th>
                                   <th> Placa </th> 
-                                  <th> Ações </th>
+                                  <th id="acoes"> Ações </th>
                                </thead>
                               <tbody>
                                   <tr *ngFor="let visitante of visitantes">
