--- a/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/components/visita/visita.component.html
+++ b/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/components/visita/visita.component.html
@@ -1,19 +1,14 @@
 <h2>Registrar Visita</h2>
-<form>
-  <label for="cadastro">Cadastro:</label>
-  <select id="cadastro" [(ngModel)]="visita.cadastro" required style="width: 300px;">
-    <option *ngFor="let porteiro of porteiros" [value]="porteiro.nome">{{ porteiro.nome }} </option> 
-  </select>  
-  <!-- <input type="text" id="cadastro" [(ngModel)]="visita.cadastro" required> -->
 
-  <!-- <label for="autorizacao">Autorização:</label>
-  <input type="text" id="autorizacao" [(ngModel)]="visita.autorizacao" required> -->
+<h2>Visitas do Visitante</h2>
 
-  <label for="cadastro">Autorizacao:</label>
-  <select id="cadastro" [(ngModel)]="visita.autorizacao" required style="width: 300px;">
-    <option *ngFor="let residente of residentes" [value]="residente.nome">{{ residente.nome }} </option> 
-  </select>  
+<div *ngIf="visitas.length === 0">
+  <p>Nenhuma visita encontrada.</p>
+</div>
 
-
-  <button type="button" (click)="registrarVisita()">Registrar</button>
-</form>
+<div *ngFor="let visita of visitas">
+  <h3>Data da Visita: {{ visita.data | date }}</h3>
+  <p>Cadastrado por: {{ visita.cadastro.nome }}</p>
+  <p>Autorizado por: {{ visita.autorizacao }}</p>
+</div>
+ <p> tá abrindo a pag</p>
