problema no idVisitante

--- a/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/visitante2/cadastro-visitante.component.html
+++ b/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/visitante2/cadastro-visitante.component.html
@@ -11,7 +11,9 @@
                     
 
                       <form [formGroup]="formulario">
-              
+
+                        <input type="hidden" formControlName="idVisitante" />
+                        
                           <div class="row">
                               <div class="col-md-6">
                                 <mat-form-field class="example-full-width">
