finalização de visitas

--- a/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/components/porteiro/porteiro-create/porteiro-create.component.scss
+++ b/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/components/porteiro/porteiro-create/porteiro-create.component.scss
@@ -2,10 +2,14 @@
     background-color: #A6D0DD;
 }
 
-#salvar {
+#cancelar {
     background-color: #FF6969;
 }
 
-#cancelar {
+#salvar {
     background-color: #19A7CE;
+}
+
+#card {
+    margin-left: 110px;
 }
