--- a/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/components/porteiro/porteiro-read/porteiro-read.component.scss
+++ b/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/components/porteiro/porteiro-read/porteiro-read.component.scss
@@ -2,10 +2,10 @@
     background-color: #A6D0DD;
 }
 
-#editar {
+#deletar {
     background-color: #FF6969;
 }
 
-#deletar, #cadastrar {
+#editar, #cadastrar {
     background-color: #19A7CE;
 }
