--- a/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/visitante2/cadastro-visitante.component.css
+++ b/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/visitante2/cadastro-visitante.component.css
@@ -3,9 +3,13 @@
 }
 
 #salvar {
-    background-color: #FF6969;
+    background-color: #19A7CE;
 }
 
 #cancelar {
-    background-color: #19A7CE;
+    background-color: #FF6969;
+}
+
+#card {
+    margin-left: 110px;
 }
