--- a/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/components/residente/residente-create/residente-create.component.html
+++ b/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/components/residente/residente-create/residente-create.component.html
@@ -1,7 +1,7 @@
 <div class="main-content">
   <div class="container-fluid">
       <div class="row">
-          <div class="col-md-12">
+          <div class="col-md-10" id="card">
               <div class="card">
                   <div class="card-header" id="header">
                       <h4 class="card-title">Cadastrar Morador</h4>
