--- a/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/visitante2/cadastro-visitante.component.html
+++ b/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/visitante2/cadastro-visitante.component.html
@@ -1,14 +1,12 @@
 <div class="main-content">
   <div class="container-fluid">
       <div class="row">
-          <div class="col-md-12">
+          <div class="col-md-10" id="card">
               <div class="card">
                   <div class="card-header" id="header">
                       <h4 class="card-title">Cadastrar Visitante</h4>
                   </div>
                   <div class="card-body">
-
-                    
 
                       <form [formGroup]="formulario">
 
@@ -56,37 +54,6 @@
                               </div>
                           </div>
                           <div class="clearfix"></div>
-                      </form>
-
-                      <form>
-                        <div class="row">
-                          <div class="col-md-4">
-                            <mat-form-field>
-                              <mat-label for="cadastro">Porteiro Responsável</mat-label>
-                              <mat-select id="cadastro" [(ngModel)]="visita.cadastro" required>
-                                <mat-option *ngFor="let porteiro of porteiros" [value]="porteiro.nome"> {{ porteiro.nome }} </mat-option>
-                              </mat-select>
-                            </mat-form-field> 
-                          </div>  
-                          
-                          <div class="col-md-4">
-                            <mat-form-field>
-                              <mat-label for="autorizacao">Autorizado por</mat-label>
-                              <mat-select id="autorizacao" [(ngModel)]="visita.autorizacao" required>
-                                <mat-option *ngFor="let residente of residentes" [value]="residente.nome"> {{ residente.nome }} </mat-option>
-                              </mat-select>
-                            </mat-form-field>
-                          </div>
-                        </div>
-
-                        <div class="row">
-                          <div class="col-md-12">
-                            <label>Observações</label>
-                            <mat-form-field class="example-full-width">
-                               <textarea matInput></textarea>
-                             </mat-form-field>
-                          </div>
-                        </div>
                       </form>
 
                       <button mat-raised-button type="submit" class="btn btn-sm pull-right" id="salvar" [disabled]="!formulario.valid" (click)="enviar()">Salvar</button>
