--- a/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/visitante2/listagem-visitante/listagem-visitantes.component.css
+++ b/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/visitante2/listagem-visitante/listagem-visitantes.component.css
@@ -2,14 +2,12 @@
     background-color: #A6D0DD;
 }
 
-#editar {
+#deletar {
     background-color: #FF6969;
-    /* margin-right: 70px; */
 }
 
-#deletar, #cadastrar {
+#editar, #cadastrar {
     background-color: #19A7CE;
-    /* margin-right: 70px; */
 }
 
 #acoes{
