--- a/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/components/login/enter/enter.component.scss
+++ b/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/components/login/enter/enter.component.scss
@@ -1,6 +1,7 @@
 .container {
     display: flex;
-    height: 100vh; /* Define a altura total da tela */
+    height: 95vh; /* Define a altura total da tela */
+    margin-top: 90px;
   }
   
   .half {
