--- a/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/components/navbar/navbar.component.html
+++ b/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/components/navbar/navbar.component.html
@@ -44,13 +44,18 @@
                         <a class="dropdown-item" href="javascript:void(0)">Another One</a>
                     </div>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0)">
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="javascript:void(0)" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
                         <i class="material-icons">person</i>
                         <p>
                             <span class="d-lg-none d-md-block">Account</span>
                         </p>
                     </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="javascript:void(0)">Perfil</a>
+                        <a class="dropdown-item" (click)="logout()">Logout</a>
+                    </div>
                 </li>
             </ul>
         </div>
