--- a/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/components/login/enter/enter.component.scss
+++ b/Front-end/material-dashboard-angular2-master/material-dashboard-angular2-master/src/app/components/login/enter/enter.component.scss
@@ -9,15 +9,18 @@
     box-sizing: border-box; /* Inclui preenchimento e borda no tamanho total */
   }
 
-  .image-container {
-    display: flex;
-    justify-content: flex-end; /* Alinha a imagem à direita */
-    align-items: right; /* Centraliza verticalmente a imagem */
-  }
+//   .image-container {
+//     width: 100%;
+//     height: 100%;
+//     display: flex;
+//     justify-content: flex-end; /* Alinha a imagem à direita */
+//     align-items: right; /* Centraliza verticalmente a imagem */
+//   }
 
   .image{
       /* width: 50px; */
-      height: 100px;
+    //   height: 100px;
+      flex: 1;
       object-fit: cover;
   }
   #entrar{
